created payments collection routes and seperated rest files
